--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project Information
-site_name: Stylescape
+site_name: Stencil
 site_url: https://www.stencil.biz/
 site_description: Stencil is a resource for Startups
 site_author: Scape Ventures
@@ -7,7 +7,7 @@ lang: en
 
 # Repository
 repo_name: 'GitHub'
-repo_url: https://github.com/scape-ventures/stylescape/
+repo_url: https://github.com/scape-ventures/stencil/
 edit_uri_template: 'docs/{path}'
 
 dev_addr: 127.0.0.1:8888
